[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/UI/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="level_selection_button" type="Button" parent="panel"]

anchor/left = 3
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 116.0
margin/right = 21.0
margin/bottom = 464.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level Selection"
flat = false

[node name="options_button" type="Button" parent="panel"]

anchor/left = 3
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 203.0
margin/right = 41.0
margin/bottom = 377.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="quit_button" type="Button" parent="panel"]

anchor/left = 3
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 92.0
margin/top = 299.0
margin/right = 52.0
margin/bottom = 281.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[connection signal="pressed" from="panel/level_selection_button" to="." method="_on_level_selection_button_pressed"]

[connection signal="pressed" from="panel/options_button" to="." method="_on_options_button_pressed"]

[connection signal="pressed" from="panel/quit_button" to="." method="_on_quit_button_pressed"]


